<!--
  ~ Copyright (c) 2021 Razeware LLC
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ Notwithstanding the foregoing, you may not use, copy, modify, merge, publish,
  ~ distribute, sublicense, create a derivative work, and/or sell copies of the
  ~ Software in any work that is designed, intended, or marketed for pedagogical or
  ~ instructional purposes related to programming, coding, application development,
  ~ or information technology.  Permission for such use, copying, modification,
  ~ merger, publication, distribution, sublicensing, creation of derivative works,
  ~ or sale is expressly withheld.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<resources>
  <string name="app_name">WhatsUp</string>
  <string name="sign_in_with_google">Sign in with Google</string>
  <string name="sign_in_failed">Sign in failed</string>
  <string name="logout">Logout</string>
  <string name="login">Login</string>
  <string name="feed">Feed</string>
  <string name="new_post">New Post</string>
  <string name="post">Post</string>
  <string name="type_here">Type here</string>
  <string name="empty_post_message">Post cannot be empty. Please add some content!</string>
  <string name="posted_successfully">Posted successfully!</string>
  <string name="post_details">Post Details</string>
  <string name="update">Update</string>
  <string name="delete">Delete</string>
  <string name="comments">Comments</string>
  <string name="add_comment">Add Comment</string>
</resources>
