<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 Razeware LLC
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ Notwithstanding the foregoing, you may not use, copy, modify, merge, publish,
  ~ distribute, sublicense, create a derivative work, and/or sell copies of the
  ~ Software in any work that is designed, intended, or marketed for pedagogical or
  ~ instructional purposes related to programming, coding, application development,
  ~ or information technology.  Permission for such use, copying, modification,
  ~ merger, publication, distribution, sublicensing, creation of derivative works,
  ~ or sale is expressly withheld.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.postDetails.PostDetailsActivity">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/postDetailsToolbar"
    style="@style/ToolbarStyle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:title="@string/post_details"
    app:titleTextColor="@android:color/white" />

  <EditText
    android:id="@+id/postText"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/normal_margin"
    android:layout_marginTop="@dimen/normal_margin"
    android:layout_marginEnd="@dimen/normal_margin"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/postDetailsToolbar" />

  <Button
    android:id="@+id/updatePostButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/normal_margin"
    android:text="@string/update"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/postText" />

  <Button
    android:id="@+id/deletePostButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/normal_margin"
    android:text="@string/delete"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/updatePostButton" />

  <TextView
    android:id="@+id/commentsLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/comments"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/deletePostButton" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/commentsRecyclerView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@id/commentEditText"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/commentsLabel" />

  <EditText
    android:id="@+id/commentEditText"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/smallest_margin"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@id/addCommentButton"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/addCommentButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/add_comment"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>